--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -42,6 +43,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "ai": "^5.0.78",
     "better-auth": "^1.3.31",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
@@ -49,6 +51,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
