--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.23",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.2.1",
+    "@polar-sh/sdk": "^0.40.2",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
